# unistellar

./: .gitignore
server/: Cargo.toml  README.md  clear_all.surql  flake.nix  history.txt  justfile  test_data.surql
server/src/: db.rs  err.rs  main.rs  media.rs  routes.rs  structs.rs
server/surql/: clear_all.surql  setup_tables.surql  test_data.surql
server/test_media/: 01J8ZTZKNXF4TCQ6AC0P61FBKW
