[package]
name = "unistellar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
chrono = "0.4.38"
dirs-next = "2.0.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "1.5.5"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
