[package]
name = "unistellar"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
chrono = "0.4.38"
dirs-next = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = { version = "1.5.5", features = ["kv-mem"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-error = "0.2.0"
clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
ulid = "1.1.3"
uuid = "1.10.0"
triple_accel = "0.4.0"

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json", "tls", "uuid", "http2"]
